# haskbrew

./: .gitignore  CHANGELOG.md  CLAUDE.md  Gemfile  LICENSE.txt  PLAN.md  README.md  Rakefile  haskbrew.gemspec
exe/: haskbrew
lib/: haskbrew.rb
lib/haskbrew/: bottle.rb  cabal.rb  changelog.rb  cli.rb  config.rb  hackage.rb  homebrew.rb  version.rb
sig/: haskbrew.rbs
sig/haskbrew/: cabal.rbs
sorbet/rbi/gems/: citrus@3.0.2.rbi  parslet@2.0.0.rbi  rbi@0.3.1.rbi  rubocop-ast@1.44.0.rbi  rubocop@1.75.2.rbi  spoom@1.6.1.rbi  tapioca@0.16.11.rbi  toml-rb@2.2.0.rbi  yard-sorbet@0.9.0.rbi
test/: test_bottle.rb  test_cabal.rb  test_changelog.rb  test_config.rb  test_debug_cabal.rb  test_hackage.rb  test_haskbrew.rb  test_helper.rb  test_homebrew.rb  test_integration.rb
test/fixtures/: sample.cabal
